--- a/src/main/resources/templates/posts/postList.html
+++ b/src/main/resources/templates/posts/postList.html
@@ -1,28 +1,24 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/header :: header"/>
 <body>
 <div class="container">
-    <div th:replace="fragments/bodyHeader :: bodyHeader"/>
     <div>
         <div>
-<!--            <form th:object="${orderSearch}" class="form-inline">-->
-<!--                <div class="form-group mb-2">-->
-<!--                    <input type="text" th:field="*{memberName}" class="formcontrol"-->
-<!--                           placeholder="회원명"/>-->
-<!--                </div>-->
-<!--                <div class="form-group mx-sm-1 mb-2">-->
-<!--                    <select th:field="*{postStatus}" class="form-control">-->
-<!--                        <option value="">글 상태</option>-->
-<!--                        <option th:each=-->
-<!--                                        "status : ${T(jpabook.jpashop.domain.OrderStatus).values()}"-->
-<!--                                th:value="${status}"-->
-<!--                                th:text="${status}">option-->
-<!--                        </option>-->
-<!--                    </select>-->
-<!--                </div>-->
-<!--                <button type="submit" class="btn btn-primary mb-2">검색</button>-->
-<!--            </form>-->
+            <form th:object="${postSearch}" class="form-inline">
+                <div class="form-group mb-2">
+                    <input type="text" th:field="*{title}" class="form-control" />
+                </div>
+                <div class="form-group mx-sm-1 mb-2">
+                    <select th:field="*{searchStatus}" class="form-control">
+                        <option value="">검색 조건</option>
+                        <option th:each="status : ${T(CrudBoard.board.domain.SearchStatus).values()}"
+                                th:text="${status}"
+                                th:value="${status}">option
+                        </option>
+                    </select>
+                </div>
+                <button type="submit" class="btn btn-primary mb-2">검색</button>
+            </form>
         </div>
         <table class="table table-striped">
             <thead>
@@ -52,7 +48,6 @@
             </tbody>
         </table>
     </div>
-    <div th:replace="fragments/footer :: footer"/>
 </div> <!-- /container -->
 </body>
 <script>
@@ -65,4 +60,3 @@
     }
 </script>
 </html>
-주문 취소
