--- a/src/main/resources/templates/posts/postList.html
+++ b/src/main/resources/templates/posts/postList.html
@@ -6,7 +6,7 @@
         <div>
             <form th:object="${postSearch}" class="form-inline">
                 <div class="form-group mb-2">
-                    <input type="text" th:field="*{title}" class="form-control" />
+                    <input type="text" th:field="*{inputString}" class="form-control" />
                 </div>
                 <div class="form-group mx-sm-1 mb-2">
                     <select th:field="*{searchStatus}" class="form-control">
