--- a/src/main/resources/templates/posts/post.html
+++ b/src/main/resources/templates/posts/post.html
@@ -2,24 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <body>
 <div class="container">
+    <div> post page !!</div>
     <div>
-        <div>
-            <form th:object="${postSearch}" class="form-inline">
-                <div class="form-group mb-2">
-                    <input type="text" th:field="*{inputString}" class="form-control" />
-                </div>
-                <div class="form-group mx-sm-1 mb-2">
-                    <select th:field="*{searchStatus}" class="form-control">
-                        <option value="">검색 조건</option>
-                        <option th:each="status : ${T(CrudBoard.board.domain.SearchStatus).values()}"
-                                th:text="${status}"
-                                th:value="${status}">option
-                        </option>
-                    </select>
-                </div>
-                <button type="submit" class="btn btn-primary mb-2">검색</button>
-            </form>
-        </div>
         <table class="table table-striped">
             <thead>
             <tr>
