--- a/src/main/resources/templates/posts/postList.html
+++ b/src/main/resources/templates/posts/postList.html
@@ -36,7 +36,7 @@
             <tr th:each="post : ${posts}">
                 <td th:text="${post.id}"></td>
                 <td th:text="${post.member.username}"></td>
-                <td th:text="${post.title}"></td>
+                <td><a th:href="@{/posts/post/{post_id}(post_id = ${post.id})}" th:text="${post.title}"></a></td>
                 <td th:text="${post.content}"></td>
                 <td>
                     <a href="#"
